--- a/src/robocon_interfaces/package.xml
+++ b/src/robocon_interfaces/package.xml
@@ -10,7 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
 
-  <build_depend>rosidl_default_generators</build_depend>
+  <depend>rosidl_default_generators</depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <depend>action_msgs</depend>
   
